@@ -8,4 +8,4 @@ Icon=qv4l2
 Terminal=false
 Type=Application
 Categories=AudioVideo;
-
+Keywords=video;grabber;V4L;
